# agents

./: .gitignore  AGENTS.md  docker-compose.yml  nw.owl  pyproject.toml  verify_refactor.py
.agent/workflows/: architecture-diagram.md
agents/: README.md  __init__.py  common.py
agents/dev_team/: capabilities.py  code_summarizer.py  execution.py  interfaces.py  main.py  memory.py  orchestrator.py  output_result.json  role_agent.py  utils.py  workflow_architecture_cn.drawio
agents/dev_team/app/: __init__.py  coordinator.py  state_machine.py  use_cases.py  workflow.py
agents/dev_team/architect/: __init__.py  agent.py
agents/dev_team/commander/: README.md  __init__.py  base_orchestrator.py  capability_detector.py  commander.py  consensus.py  cross_validator.py
agents/excel_to_csv/: README.md  agent.py
agents/ontology_builder/: README.md  agent.py
agents/restaurant_recommender/: README.md  agent.py
agents/task_planner/: __init__.py  agent.py  demo.py
data/sample_site/: article1.html  index.html
docs/: dev_team_commander_integration.md  dev_team_testing.md  flowise.md  quality_loop_spec.md  streamlit.md  structure.md
docs/templates/: acceptance_checklist.md  adr.md  brainstorm_record.md  bug_card.json  current_state_summary.md  design_review_checklist.md  evidence_pack.json
input/: mock_fields_200.csv
scripts/: generate_ontology_owl.py  geo_probe.html  geo_probe.py
ui/: __init__.py  ontology_builder_app.py  streamlit_app.py
ui/theme/: theme.py
ui/views/: __init__.py  architect.py  dev_team.py  excel_to_csv.py  food_picks.py  task_planner.py
(+81 files in other folders)
