[tool.poetry]
name = "agents"
version = "0.1.0"
description = "LangChain-based multi-agent workspace"
authors = ["Your Team <team@example.com>"]
readme = "Agent.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
langchain-core = "^1.2.3"
langchain-openai = "^0.3.7"
pyyaml = "^6.0.3"
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
